# cosmic-python-ddd

./: .docker.env  .env  .gitignore  Dockerfile  Makefile  Readme.md  batches_domain.py  docker-compose.yml  domain.py  orm.py  pyproject.toml  repository.py  setup.cfg  test_allocate.py  test_batches.py  test_money.py  tmp.py
sql/: batches.data.sql
src/: setup.py
src/app/: domain.py  log_config.py  main.py  model.py  repository.py  settings.py
src/app/core/batch/: domain.py  exceptions.py  repositories.py  services.py  uow.py
src/app/core/common/: repositories.py  uow.py
src/app/core/order_lines/: domain.py
src/app/core/product/: domain.py  exceptions.py  repositories.py  services.py  uow.py
src/app/domain/: batches.py  orders.py
src/app/models/: __init__.py  base.py  batches.py  database.py  db.py  order_lines.py  orders.py  products.py
src/app/repository/: abstract.py  batches.py
src/app/routers/: base.py  root.py
src/app/schemas/: order_lines.py
src/app/schemas/request/: batches.py
src/app/scripts/: async_allocate.py
src/etc/: sync.py
src/migrations/: env.py
src/migrations/versions/: afc09de52fcd_add_tables.py  bbeeb589267d_test.py
src/tests/: conftest.py  test_repository.py  utils.py
src/tests/app/domain/: test_allocate.py  test_batches.py
src/tests/domain/: test_batch.py  test_product.py
tests/: 1test_api.py  conftest.py  test_allocate.py  test_batches.py  test_orm.py  test_repository.py
tests/app/routers/: test_root.py
tests/domain/: test_allocate.py  test_domain.py
tests/etc/: test_sync.py
(+7 files in other folders)
