[tool.poetry]
name = "cosmic-python-ddd"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <y.orlov@fonmix.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
SQLAlchemy = "^1.4.46"
fastapi = "^0.89.0"
loguru = "^0.6.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99
target-version = ['py39']
skip-string-normalization = 1
