[tool.poetry]
name = "cosmic-python-ddd"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <y.orlov@fonmix.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pytest = "^7.2.1"
SQLAlchemy = "^2.0.4"
uvicorn = "^0.20.0"
alembic = "^1.9.4"
psycopg2-binary = "^2.9.5"
rich = "^13.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
